# slopflow

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: attempts.md  release.md
docs/adr/: 0001-slopflow-v0-is-a-cli-runbook.md  0002-slopflow-cli-is-typescript-first.md  0003-test-evidence-keeps-attempt-history.md  0004-review-command-does-not-self-approve.md  0005-complete-is-a-local-artifact-gate.md  0006-skills-are-distributed-by-skills-installers.md  0007-lifecycle-commands-are-artifact-state-transitions.md  0008-cli-output-follows-axi-principles.md  0009-agent-docs-use-okf-runtime-artifacts-remain-slopflow-artifacts.md  0010-parallel-agent-work-is-artifact-coordination.md  0011-provider-neutral-issue-intake.md  index.md
docs/agents/: domain.md  index.md  issue-tracker.md  triage-labels.md
scripts/: pack-smoke.mjs
skills/setup-matt-pocock-skills/: SKILL.md  issue-tracker-local.md
skills/setup-matt-pocock-skills-live/: SKILL.md  domain.md  issue-tracker-gitlab.md  triage-labels.md
skills/setup-slopflow-skills/: SKILL.md
skills/setup-slopflow-skills-live/: SKILL.md  issue-tracker-github.md
skills/slopflow/: SKILL.md
skills/slopflow-live/: SKILL.md
slopflow/: __init__.py  cli.py
src/: app.ts  attempts.ts  cli.ts  harness-install.ts  infra.ts  issue-intake.ts  issue-model.ts  lifecycle.ts  quality-artifacts.ts  start-artifacts.ts  types.ts
src/commands/: core.ts  start.ts
test/: cli.test.js  okf-docs.test.js
tests/: test_cli.py
