[project]
name = "slopflow"
version = "0.1.0"
description = "Controlled issue execution workflow for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
slopflow = "slopflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
